<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:textColor="@color/black"

        />

    <ImageButton
        android:id="@+id/sortType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_baseline_filter_list_24"
        app:tint="@color/black"
        android:backgroundTint="@color/white"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginBottom="2dp"
        android:layout_above="@id/tasks"
        />


    <!--Tasks available-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/AppTitle"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:nestedScrollingEnabled="true"

        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"

        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/purple_200"
        android:elevation="10dp"
        android:src="@drawable/ic_baseline_add_32"
        android:tint="@color/white"
        app:iconTint="@color/white" />

    <!-- In case of no tasks -->

    <ImageView
        android:id="@+id/noTasksImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_below="@id/AppTitle"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/circle_shape"
        android:padding="10dp"

        android:src="@drawable/ic_baseline_done_all_24"
        android:visibility="visible" />

    <TextView
        android:id="@+id/NoTasksInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/noTasksImage"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/noTasks"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"

        android:visibility="visible"
        />


    <TextView
        android:id="@+id/NoTasksMoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NoTasksInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/noTasksMoreInfo"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"

        android:visibility="visible" />

</RelativeLayout>